fixed horizontal scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -89,15 +89,7 @@ html {
 }
 
 #demo-canvas {
-  max-width: 100vw !important;
-}
-
-section {
-  height: 80vh;
-  min-height: 590px;
-  border-top: 1px white solid;
-  border-bottom: 1px white solid;
-  border: 1px solid orange;
+  /* max-width: 900px !important; */
 }
 
 body {
@@ -105,13 +97,24 @@ body {
   background-size: cover;
   background-color: black;
   color: white;
-  margin-left: 76px;
-  max-width: calc(100vw - 76px);
+  /* margin-left: 76px; */
+  /* max-width: calc(100vw - 76px); */
+}
+
+section {
+  height: 80vh;
+  min-height: 590px;
+  border-top: 1px white solid;
+  border-bottom: 1px white solid;
+  /* border: 1px solid orange; */
+  margin-left: 75px;
+
 }
 
 .welcome {
   /* overflow: hidden; */
-  margin-left: -75px;
+  margin-left: 0px;
+  max-width: 100%;
 }
 
 .sidebar {
@@ -125,6 +128,7 @@ body {
   /* background-color: white; */
   background-color: rgb(255, 255, 255, 0.2);
   border: none;
+  margin: 0;
 
   /* display: none; */
 }
@@ -144,23 +148,23 @@ body {
 }
 
 .about-icon {
-  background: url("../img/icons/about-icon-white.png")
+  background: url("../img/sidebar/about-icon-white.png")
 }
 
 .projects-icon {
-  background: url("../img/icons/projects-icon-white.png")
+  background: url("../img/sidebar/projects-icon-white.png")
 }
 
 .links-icon {
-  background: url("../img/icons/links-icon-white.png")
+  background: url("../img/sidebar/links-icon-white.png")
 }
 
 .contact-icon {
-  background: url("../img/icons/contact-icon-white.png")
+  background: url("../img/sidebar/contact-icon-white.png")
 }
 
 .welcome-icon {
-  background: url("../img/icons/welcome-icon-white.png")
+  background: url("../img/sidebar/welcome-icon-white.png")
 }
 
 
@@ -226,6 +230,7 @@ body {
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
+  display: none;
 }
 
 .project-screenshots img {
